--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "beszel",
 	"private": true,
-	"version": "0.12.0-beta2",
+	"version": "0.12.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
