--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,16 @@ jobs:
         with:
           go-version: "^1.22.1"
 
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "9.0.x"
+
+      - name: Build .NET LHM executable for Windows sensors
+        run: |
+          dotnet build -c Release ./beszel/internal/agent/lhm/beszel_lhm.csproj
+        shell: bash
+
       - name: GoReleaser beszel
         uses: goreleaser/goreleaser-action@v6
         with:
