--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -44,7 +44,6 @@
 		"react-dom": "^19.1.1",
 		"recharts": "^2.15.4",
 		"tailwind-merge": "^2.6.0",
-		"tailwindcss-animate": "^1.0.7",
 		"valibot": "^0.42.1"
 	},
 	"devDependencies": {
@@ -52,14 +51,15 @@
 		"@lingui/swc-plugin": "^5.6.1",
 		"@lingui/vite-plugin": "^5.4.1",
 		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/postcss": "^4.1.12",
 		"@types/bun": "^1.2.20",
 		"@types/react": "^18.3.24",
 		"@types/react-dom": "^18.3.7",
 		"@vitejs/plugin-react-swc": "^3.11.0",
-		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.6",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.12",
 		"tailwindcss-rtl": "^0.9.0",
+		"tw-animate-css": "^1.3.7",
 		"typescript": "^5.9.2",
 		"vite": "^6.3.5"
 	},
