ui: add devices count from #1078

--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -4,7 +4,7 @@
 	"version": "0.12.5",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "lingui extract --overwrite && lingui compile && vite build",
 		"preview": "vite preview",
 		"sync": "lingui extract --overwrite && lingui compile",
