--- a/src/site/package.json
+++ b/src/site/package.json
@@ -38,6 +38,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"d3-time": "^3.1.0",
+		"input-otp": "^1.4.2",
 		"lucide-react": "^0.452.0",
 		"nanostores": "^0.11.4",
 		"pocketbase": "^0.26.2",
