--- a/internal/site/package.json
+++ b/internal/site/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "beszel",
 	"private": true,
-	"version": "0.14.0-alpha.2",
+	"version": "0.14.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite --host",
