--- a/internal/site/package.json
+++ b/internal/site/package.json
@@ -36,6 +36,8 @@
 		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-toast": "^1.2.15",
 		"@radix-ui/react-tooltip": "^1.2.8",
+		"@shikijs/langs": "^3.14.0",
+		"@shikijs/themes": "^3.14.0",
 		"@tanstack/react-table": "^8.21.3",
 		"@tanstack/react-virtual": "^3.13.12",
 		"class-variance-authority": "^0.7.1",
