change layout of extra disks in all systems table (#1409)

--- a/internal/site/biome.json
+++ b/internal/site/biome.json
@@ -48,7 +48,8 @@
 			},
 			"suspicious": {
 				"useAwait": "error",
-				"noEvolvingTypes": "error"
+				"noEvolvingTypes": "error",
+				"noArrayIndexKey": "off"
 			}
 		}
 	},
