--- a/internal/site/biome.json
+++ b/internal/site/biome.json
@@ -17,6 +17,9 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"a11y": {
+				"useButtonType": "off"
+			},
 			"complexity": {
 				"noUselessStringConcat": "error",
 				"noUselessUndefinedInitialization": "error",
@@ -37,6 +40,9 @@
 				},
 				"useUniqueElementIds": "off",
 				"noUnusedVariables": "error"
+			},
+			"security": {
+				"noDangerouslySetInnerHtml": "warn"
 			},
 			"style": {
 				"noParameterProperties": "error",
