--- a/internal/dockerfile_agent_alpine
+++ b/internal/dockerfile_agent_alpine
@@ -17,7 +17,7 @@ RUN rm -rf /tmp/*
 # --------------------------
 # Final image: default scratch-based agent
 # --------------------------
-FROM alpine:latest
+FROM alpine:3.22
 COPY --from=builder /agent /agent
 
 RUN apk add --no-cache smartmontools
