--- a/supplemental/helm/beszel-hub/Chart.yaml
+++ b/supplemental/helm/beszel-hub/Chart.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 description: Installs beszel-hub in kubernetes
-home: https://github.com/dnikoloski/beszel-kubernetes/tree/main/charts/beszel-hub
+home: https://github.com/henrygd/beszel/tree/main/supplemental/helm/beszel-hub
 name: beszel-hub
 appVersion: "0.9"
 # Do not touch will be updated during release
 version: 0.1.0
 sources:
-  - https://github.com/dnikoloski/beszel-kubernetes/tree/main/charts/beszel-hub
+  - https://github.com/henrygd/beszel/tree/main/supplemental/helm/beszel-hub
   - https://www.beszel.dev/
   - https://github.com/henrygd/beszel
 icon: https://repository-images.githubusercontent.com/825470378/2710c6db-f934-4a8b-a2c4-7a0abbcd2ad6
 maintainers:
-  - name: dnikoloski
+  - name: cloudwithdan
     email: nikoloskid@pm.me
