feat: Add Kubernetes metrics integration

--- a/supplemental/kubernetes/beszel-hub/charts/templates/deployment.yaml
+++ b/supplemental/kubernetes/beszel-hub/charts/templates/deployment.yaml
@@ -50,6 +50,10 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          {{- if .Values.env }}
+          env:
+            {{- toYaml .Values.env | nindent 12 }}
+          {{- end }}
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
